Only allow one post per thread & update example config

--- a/wadebot-example-config.json
+++ b/wadebot-example-config.json
@@ -1,4 +1,6 @@
 {
+	"SearchPhrase": "wade",
+	"Subreddits": "denverbroncos",
 	"RedisPort": 14737,
 	"RedisHost": "********.*****.gce.garantiadata.com",
 	"RedisPassword": "***********",
